--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,12 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 *.zip
 *.tar.gz
 *.rar
+artifacts/TestTaskCFT_jar/TestTaskCFT.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
