--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 *.tar.gz
 *.rar
 artifacts/TestTaskCFT_jar/TestTaskCFT.jar
+out/production/TestTaskCFT/META-INF/MANIFEST.MF
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
